# memphora-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/memphora_mcp/: __init__.py  client.py  server.py
tests/: __init__.py  test_client.py
